Bug 324141 - KAddressBook's default export method seems to be a seperate vcard for each contact.
Summary: KAddressBook's default export method seems to be a seperate vcard for each co...
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-27 22:51 UTC by Kete
Modified: 2013-09-04 07:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kete 2013-08-27 22:51:30 UTC
Exporting each contact to a seperate vcard turned out to be highly incompatible for an application like Thunderbird which can only import one vcard, i.e. contact, at a time.

Reproducible: Always

Steps to Reproduce:
1. Export contacts.
2. 
3.
Actual Results:  
Default is a separate vcard for each contact.

Expected Results:  
Default should be one vcard.
Comment 1 Laurent Montel 2013-09-04 07:22:11 UTC
Git commit 8299ed15143b250f1f2a59bfc1d311bcb2b5d397 by Montel Laurent.
Committed on 04/09/2013 at 07:21.
Pushed by mlaurent into branch 'KDE/4.11'.

fix Bug 324141 - KAddressBook's default export method seems to be a seperate vcard for each contact.

FIXED-IN: 4.11.2

M  +4    -4    kaddressbook/xxport/vcard/vcard_xxport.cpp

http://commits.kde.org/kdepim/8299ed15143b250f1f2a59bfc1d311bcb2b5d397