fix Bug 324141 - KAddressBook's default export method seems to be a seperate vcard for each contact.

FIXED-IN: 4.11.2
BUG: 324141